--- a/cupid_matching/mkdocs.yml
+++ b/cupid_matching/mkdocs.yml
@@ -58,4 +58,6 @@ nav:
       - Utilities for Matching: matching_utils.md
       - General Utilities: utils.md
       - Classes used: model_classes.md
+      - Example on the Choo and Siow model: example_choosiow.md
+      - Example on a nested logit model: example_nestedlogit.md
       - Code for a Streamlit app: cupid_streamlit.md
