--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cupid_matching"
-version = "1.1.1"
+version = "1.1.2"
 description = "Solves, simulates, and estimates separable matching TU models"
 authors = ["Bernard Salanie <bsalanie@columbia.edu>"]
 readme = "README.md"
@@ -17,7 +17,7 @@ pandas = "^1.4"
 scikit-learn = "^1.1"
 streamlit = "^1.20"
 watchdog = "^3.0"
-bs-python-utils = "^0.0.5"
+bs_python_utils = "^0.5.5"
 
 
 [tool.poetry.group.dev.dependencies]
