fixing the lock

--- a/mypy.ini
+++ b/mypy.ini
@@ -36,3 +36,5 @@ ignore_missing_imports = True
 [mypy-bs_python_utils.*]
 ignore_missing_imports = True
 
+[mypy-streamlit.*]
+ignore_missing_imports = True
