--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ scikit-learn = "^1.1"
 streamlit = "^1.20"
 watchdog = "^3.0"
 bs_python_utils = "^0.6"
+pre-commit = "^3.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
