--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,114 +1,35 @@
-[tool.poetry]
-name = "cupid_matching"
-version = "1.3"
-description = "Solves, simulates, and estimates separable matching TU models"
-authors = ["Bernard Salanie <bsalanie@columbia.edu>"]
+[project]
+name = "cupid-matching"
+version = "1.4.0"
+description = "Add your description here"
 readme = "README.md"
-packages = [{include = "cupid_matching"}]
+requires-python = ">=3.12"
+dependencies = [
+    "bs-python-utils>=0.8.0",
+    "altair>=5.5.0",
+    "altair-saver>=0.5.0",
+    "matplotlib>=3.10.6",
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.20",
+    "mkdocstrings-python>=1.18.2",
+    "numpy>=2.3.3",
+    "pandas>=2.3.2",
+    "pre-commit>=4.3.0",
+    "pytest>=8.4.2",
+    "ruff>=0.14.0",
+    "scikit-learn>=1.7.2",
+    "scipy>=1.16.2",
+    "seaborn>=0.13.2",
+    "statsmodels>=0.14.5",
+    "streamlit>=1.49.1",
+    "vega-datasets>=0.9.0",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-numpy = "^1.20"
-scipy = "^1.8"
-matplotlib = "^3.6"
-seaborn = "^0.12"
-altair = "^4.2"
-pandas = "^2.1"
-scikit-learn = "^1.1"
-streamlit = "^1.20"
-watchdog = "^3.0"
-bs_python_utils = "^0.6"
-pre-commit = "^3.5.0"
+[tool.setuptools]
+packages = ["cupid_matching"]
 
-
-[tool.poetry.group.dev.dependencies]
-pip = "^23.0"
-wheel = "^0.35"
-black = "*"
-flake8 = "*"
-pytest = "^7.2.0"
-mypy = "^1.2"
-
-
-[tool.poetry.group.docs.dependencies]
-mkdocs = "^1.4.2"
-mkdocs-material = "^8.5.10"
-mkdocstrings = {extras = ["python"], version = "^0.21.0"}
-markdown = "^3.3"
-pymdown-extensions = "*"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.black]
-line-length = 88
-target-version = ['py310']
-preview = true
-
-[tool.isort]
-profile = "black"
-py_version = 310
-multi_line_output = 3
-
-[tool.mypy]
-files = ["cupid_matching"]
-disallow_untyped_defs = "True"
-disallow_any_unimported = "True"
-no_implicit_optional = "True"
-check_untyped_defs = "True"
-warn_return_any = "True"
-warn_unused_ignores = "True"
-show_error_codes = "True"
+[tool.setuptools.package-data]
+"cupid_matching" = ["examples/*", "examples/**/*"]
 
 [tool.ruff]
-target-version = "py310"
 line-length = 88
-fix = true
-select = [
-    # flake8-2020
-    "YTT",
-    # flake8-bandit
-    "S",
-    # flake8-bugbear
-    "B",
-    # flake8-builtins
-    "A",
-    # flake8-comprehensions
-    "C4",
-    # flake8-debugger
-    "T10",
-    # flake8-simplify
-    "SIM",
-    # isort
-    "I",
-    # mccabe
-    "C90",
-    # pycodestyle
-    "E", "W",
-    # pyflakes
-    "F",
-    # pygrep-hooks
-    "PGH",
-    # pyupgrade
-    "UP",
-    # ruff
-    "RUF",
-    # tryceratops
-    "TRY",
-]
-ignore = [
-    # LineTooLong
-    "E501",
-    # DoNotAssignLambda
-    "E731",
-    # BlanketTypeIgnore
-    "PGH003",
-    # too comples
-    "C901",
-]
-
-[tool.ruff.per-file-ignores]
-"tests/*" = ["S101"]
-
-
