--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,23 +6,23 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "bs-python-utils>=0.8.0",
-    "altair>=5.5.0",
-    "altair-saver>=0.5.0",
-    "matplotlib>=3.10.6",
-    "mkdocs>=1.6.1",
-    "mkdocs-material>=9.6.20",
-    "mkdocstrings-python>=1.18.2",
-    "numpy>=2.3.3",
-    "pandas>=2.3.2",
-    "pre-commit>=4.3.0",
-    "pytest>=8.4.2",
-    "ruff>=0.14.0",
-    "scikit-learn>=1.7.2",
-    "scipy>=1.16.2",
-    "seaborn>=0.13.2",
-    "statsmodels>=0.14.5",
-    "streamlit>=1.49.1",
-    "vega-datasets>=0.9.0",
+    "numpy",
+    "pandas",
+    "scipy",
+    "scikit-learn",
+    "statsmodels",
+    "altair",
+    "altair-saver",
+    "vega-datasets",
+    "matplotlib",
+    "seaborn",
+    "mkdocs",
+    "mkdocs-material",
+    "mkdocstrings-python",
+    "pre-commit",
+    "pytest",
+    "ruff",
+    "streamlit",
 ]
 
 [tool.setuptools]
