--- a/.github/actions/setup-uv-env/action.yml
+++ b/.github/actions/setup-uv-env/action.yml
@@ -29,5 +29,5 @@ runs:
 
     - name: Install dependencies
       if: steps.cached-uv-dependencies.outputs.cache-hit != 'true'
-      run: uv sync --no-interaction
+      run: uv sync
       shell: bash
