--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,9 +35,8 @@ plugins:
   - mkdocstrings:
       handlers:
         python:
-          setup_commands:
-            - import sys
-            - sys.path.append('../')
+          paths:
+            - ..
 
 # theme:
 #   palette:
