fixed mypy for cupid_streamlit_utils

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,7 @@ plugins:
       handlers:
         python:
           paths:
-            - cupid_matching
+            # - cupid_matching
 
 # theme:
 #   palette:
